src/index.css
*,*::before,*::after{
  box-sizing: border-box;
}
body{
  margin: 0;
  font-family: 'Karla', sans-serif;
  min-height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #F5F7FB;
  background-image: url("./assets/bottom blob.png"), url("./assets/top blob.png");
  background-repeat: no-repeat;
  background-position: bottom left, top right;
}
h1, h2, h3, h4, p, figure, blockquote, dl, dd, hr {
  margin: 0;
}
.landing{
  text-align: center;
  color: #293264;
  background-repeat: no-repeat;
}
.landing p{
  margin-top: 7px;
}
.landing button{
  min-width: 12rem;
  margin-top: 30px;
  padding: 1rem 1.8rem;
  background-color: #4D5B9E;
  color: #F5F7FB;
  border: none;
  border-radius: 1rem;
}
.landing button:active{
  box-shadow: inset 5px 5px 10px -3px rgba(0, 0, 0, 0.7);
}
.questions{
  padding: 1rem;
  color: #293264;
  display: flex;
  flex-direction: column;
  justify-content: center;
}
.questions > div + div{
  margin-top: .93rem;
}
.questions .options{
  margin-top: .75rem;
}
.options{
  display: flex;
  flex-wrap: wrap;
}
.options button{
  color: inherit;
  background-color: transparent;
  border: 1px solid #4D5B9E;
  border-radius: 7px;
  margin-right: .75rem;
  padding: .25rem .93rem;
}
.questions hr{
  color: #DBDEF0;
  margin-top: .93rem;
}
.submit{
  padding: .6875rem 1.3125rem;
  background-color: #4D5B9E;
  border: none;
  color: #F5F7FB;
  border-radius: 10px;
  width: fit-content;
  align-self: center;
}
.options .clicked{
  background-color: #D6DBF5;
  border: #D6DBF5 1px solid;
}
.options .correct{
  background-color: #94D7A2;
  border: 1px solid #94D7A2;
}
.options .incorrect{
  background-color: #F8BCBC;
  border: 1px solid #F8BCBC;
  opacity: 0.5;
}
.options .notClicked{
  opacity: 0.5;
}
.bottom{
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-bottom: 2rem;
}
.score{
  margin-bottom: .7rem;
}

